Temp fix for form contents not showing when form is shrinking, will likely have to make more precise later

--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ form {
 }
 
 .start-screen-hide-animation *,
-.form-hide-animation {
-    display: none;
+.form-hide-animation * {
+    dispslay: none;
 }
 
 #default-display-none {
